--- a/src/styles/home/Advantages.scss
+++ b/src/styles/home/Advantages.scss
@@ -8,7 +8,7 @@
 
         .card {
             width: 100%;
-            height: 18vw;
+            height: 7vw;
             overflow: hidden;
             position: relative;
 
@@ -30,6 +30,44 @@
                 height: 100%;
                 object-fit: cover;
                 position: absolute;
+            }
+        }
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(5, 5fr);
+
+        @media (max-width:767px) {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .card {
+            display: flex;
+            flex-direction: column;
+
+            @media (max-width:767px) {
+                width: 30%;
+            }
+
+            .text {
+                font-weight: 600;
+                text-align: center;
+            }
+
+            .img {
+                max-width: 100%;
+                min-width: 100%;
+                max-height: 10vw;
+                min-height: 10vw;
+                object-fit: cover;
+
+                @media (max-width:767px) {
+                    max-height: 20vw;
+                    min-height: 20vw;
+                }
             }
         }
     }
