--- a/src/styles/home/Advantages.scss
+++ b/src/styles/home/Advantages.scss
@@ -46,27 +46,29 @@
 
         .card {
             display: flex;
-            flex-direction: column;
+            align-items: center;
 
             @media (max-width:767px) {
                 width: 30%;
+                flex-direction: column;
             }
 
             .text {
                 font-weight: 600;
-                text-align: center;
+
+                @media (max-width:767px) {
+                    text-align: center;
+                }
             }
 
             .img {
-                max-width: 100%;
-                min-width: 100%;
-                max-height: 10vw;
-                min-height: 10vw;
+                max-width: 5vw;
+                min-width: 5vw;
                 object-fit: cover;
 
                 @media (max-width:767px) {
-                    max-height: 20vw;
-                    min-height: 20vw;
+                    max-width: 90%;
+                    min-width: 90%;
                 }
             }
         }
