--- a/src/styles/home/HomeNews.scss
+++ b/src/styles/home/HomeNews.scss
@@ -48,7 +48,7 @@ $secondary: #072B3D;
                     min-width: 100%;
                     max-height: 100%;
                     min-height: 100%;
-                    object-fit: cover;
+                    object-fit: contain;
                 }
             }
 
@@ -133,7 +133,7 @@ $secondary: #072B3D;
                     min-width: 100%;
                     max-height: 12vw;
                     min-height: 12vw;
-                    object-fit: cover;
+                    object-fit: contain;
 
                     @media (max-width:767px) {
                         max-height: 25vw;
