--- a/src/styles/other/News.scss
+++ b/src/styles/other/News.scss
@@ -25,8 +25,9 @@ $secondary: #072B3D;
         }
 
         .news_img {
-            max-width: 100%;
-            min-width: 100%;
+            max-width: 80%;
+            min-width: 80%;
+            margin-left: 10%;
         }
 
         .mySwiper {
@@ -43,7 +44,7 @@ $secondary: #072B3D;
                     min-width: 100%;
                     max-height: 12vw;
                     min-height: 12vw;
-                    object-fit: cover;
+                    object-fit: contain;
 
                     @media (max-width:767px) {
                         max-height: 25vw;
