--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -25,7 +25,7 @@ $secondary: #072B3D;
         display: flex;
         padding: 0.8vw 10vw;
         align-items: center;
-        background-color: $primary;
+        background-color: $secondary;
         justify-content: space-between;
 
         @media (max-width:767px) {
@@ -46,7 +46,7 @@ $secondary: #072B3D;
             color: white;
             font-weight: 600;
             padding: 0.7vw 1.3vw;
-            background-color: $secondary;
+            background-color: $primary;
 
             @media (max-width:767px) {
                 padding: 1.8vw 3vw;
@@ -275,6 +275,7 @@ $secondary: #072B3D;
 
                         .left {
                             display: flex;
+                            color: black;
                             align-items: center;
 
                             .icn1 {
