--- a/src/styles/home/HomeNews.scss
+++ b/src/styles/home/HomeNews.scss
@@ -41,6 +41,9 @@ $secondary: #072B3D;
                 @media (max-width:767px) {
                     width: 100%;
                     height: 45%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
 
                 .img {
@@ -49,6 +52,11 @@ $secondary: #072B3D;
                     max-height: 100%;
                     min-height: 100%;
                     object-fit: contain;
+
+                    @media (max-width:767px) {
+                        max-width: 40%;
+                        min-width: 40%;
+                    }
                 }
             }
 
