--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,5 @@
 // fonts //
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -683,6 +681,10 @@ html {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 
+    &::first-letter {
+        text-transform: uppercase;
+    }
+
     @media (max-width:1000px) {
         font-size: 4.5vw;
     }
@@ -701,6 +703,10 @@ html {
     font-weight: 600;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+
+    &::first-letter {
+        text-transform: uppercase;
+    }
 
     @media (max-width:1000px) {
         font-size: 3.5vw;
@@ -721,6 +727,10 @@ html {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 
+    &::first-letter {
+        text-transform: uppercase;
+    }
+
     @media (max-width:1000px) {
         font-size: 2.5vw;
     }
@@ -739,6 +749,10 @@ html {
     font-weight: 500;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+
+    &::first-letter {
+        text-transform: uppercase;
+    }
 
     @media (max-width:1000px) {
         font-size: 2.3vw;
@@ -759,6 +773,10 @@ html {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 
+    &::first-letter {
+        text-transform: uppercase;
+    }
+
     @media (max-width:1000px) {
         font-size: 2vw;
     }
@@ -778,6 +796,10 @@ html {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 
+    &::first-letter {
+        text-transform: uppercase;
+    }
+
     @media (max-width:1000px) {
         font-size: 1.8vw;
     }
@@ -796,6 +818,10 @@ html {
     font-weight: 400;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+
+    &::first-letter {
+        text-transform: uppercase;
+    }
 
     @media (max-width:1000px) {
         font-size: 1.5vw;
