--- a/src/styles/home/TopProducts.scss
+++ b/src/styles/home/TopProducts.scss
@@ -26,14 +26,24 @@ $secondary: #072B3D;
             }
         }
 
-        .mySwiper {
+        .prods {
+            display: grid;
+            grid-template-columns: repeat(4, 4fr);
+
+            @media (max-width:767px) {
+                grid-template-columns: repeat(2, 2fr);
+            }
+        }
+
+        .mySwiper,
+        .prods {
             width: 100%;
 
             .product {
                 display: flex;
                 flex-direction: column;
                 background-color: white;
-                border: solid 1px rgba(237, 237, 237, 0.634);
+                border: solid 1px rgba(207, 207, 207, 0.634);
 
                 .imgs {
                     display: flex;
@@ -42,7 +52,7 @@ $secondary: #072B3D;
                     align-items: flex-end;
                     flex-direction: column;
                     background-color: white;
-                    border: solid 1px #F5F5F7;
+                    border: solid 1px #e0e0e0;
 
                     .badge {
                         top: 0;
@@ -84,9 +94,9 @@ $secondary: #072B3D;
                     .img {
                         max-width: 100%;
                         min-width: 100%;
-                        max-height: 15vw;
-                        min-height: 15vw;
-                        margin-left: -30%;
+                        max-height: 12vw;
+                        min-height: 12vw;
+                        margin-left: -15%;
                         object-fit: contain;
 
                         @media (max-width:767px) {
@@ -101,9 +111,13 @@ $secondary: #072B3D;
                     opacity: 0.6;
                     overflow: hidden;
                     font-weight: 700;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 2;
-                    -webkit-box-orient: vertical;
+                    // display: -webkit-box;
+                    // -webkit-line-clamp: 2;
+                    // -webkit-box-orient: vertical;
+
+                    &::first-letter {
+                        text-transform: uppercase;
+                    }
                 }
 
                 .price {
@@ -121,7 +135,7 @@ $secondary: #072B3D;
                         padding-top: 0.5vw;
                         text-decoration: none;
                         padding-bottom: 0.5vw;
-                        background-color: #F5F5F7;
+                        background-color: #ededed;
 
                         &:hover {
                             color: white;
