--- a/src/styles/other/Products.scss
+++ b/src/styles/other/Products.scss
@@ -85,7 +85,7 @@ $secondary: #072B3D;
         }
 
         .right {
-            width: 72%;
+            width: 100%;
             display: flex;
             flex-direction: column;
 
@@ -110,6 +110,20 @@ $secondary: #072B3D;
                     flex-direction: column;
                     background-color: white;
                     border: solid 1px rgba(237, 237, 237, 0.634);
+
+                    &:hover {
+                        .imgs::before {
+                            left: 100%;
+                        }
+
+                        .img {
+                            transform: scale(1.2);
+                            -webkit-transform: scale(1.2);
+                            -moz-transform: scale(1.2);
+                            -ms-transform: scale(1.2);
+                            -o-transform: scale(1.2);
+                        }
+                    }
 
                     .imgs {
                         display: flex;
@@ -160,15 +174,22 @@ $secondary: #072B3D;
                         .img {
                             max-width: 100%;
                             min-width: 100%;
-                            max-height: 11vw;
-                            min-height: 11vw;
-                            margin-left: -22%;
+                            max-height: 15vw;
+                            min-height: 15vw;
+                            transition: 0.2s;
+                            -webkit-transition: 0.2s;
+                            -moz-transition: 0.2s;
+                            -ms-transition: 0.2s;
+                            -o-transition: 0.2s;
+                            margin-left: -20%;
                             object-fit: contain;
 
                             @media (max-width:767px) {
-                                max-height: 25vw;
-                                min-height: 25vw;
+                                margin-left: 0;
+                                max-height: 33vw;
+                                min-height: 33vw;
                             }
+
                         }
                     }
 
