--- a/src/styles/home/TopProducts.scss
+++ b/src/styles/home/TopProducts.scss
@@ -111,9 +111,9 @@ $secondary: #072B3D;
                     opacity: 0.6;
                     overflow: hidden;
                     font-weight: 700;
-                    // display: -webkit-box;
-                    // -webkit-line-clamp: 2;
-                    // -webkit-box-orient: vertical;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
 
                     &::first-letter {
                         text-transform: uppercase;
