--- a/src/styles/home/Partners.scss
+++ b/src/styles/home/Partners.scss
@@ -36,9 +36,9 @@ $secondary: #49C3F2;
                 .img {
                     max-width: 100%;
                     min-width: 100%;
-                    // max-height: 100%;
-                    // min-height: 100%;
-                    object-fit: cover;
+                    max-height: 100%;
+                    min-height: 100%;
+                    object-fit: contain;
                 }
             }
 
